--- a/real-escape-game-v5/main.html
+++ b/real-escape-game-v5/main.html
@@ -34,7 +34,7 @@
         <section class="section">
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>さぁゲームを始めよう！</h2>
-            <p class="text-center">スマートフォンにウイルスが侵入してしまった。このままだと個人情報を盗まれてしまう。<br>
+            <p class="text-center">パソコンにウイルスが侵入してしまった。このままだと個人情報を盗まれてしまう。<br>
               メールアドレスを取られてしまった。クイズを間違えると不正利用されてしまう。<br>
               クイズを解いてメールアドレスを守ろう！<br>             <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
   
