--- a/real-escape-game-v5/main.html
+++ b/real-escape-game-v5/main.html
@@ -40,7 +40,8 @@
   
             <div class="container">
               <figure class="image__container">
-                <img src="assets/images/stage.png" alt="">
+                <img src="assets/images/62cc9ab094122bc8.jpeg" alt="">
+                
               </figure>
                 
  <!--  YouTube貼り付け
@@ -129,7 +130,7 @@ Youtube貼り付けここまで -->
                 <div class="column">
                   <!-- STAGE2-1問題セクション　ここから -->
                   <figure class="image__container">
-                    <img src="assets/images/stage.png" alt="">
+                    <img src="assets/images/62cc9ab094122bc8.jpeg" alt="">
                   </figure>
                   <!-- STAGE2-1問題セクション　ここまで -->
                   <!-- STAGE2-1解答入力セクション　ここから -->
@@ -144,7 +145,7 @@ Youtube貼り付けここまで -->
                 <div class="column">
 
                   <figure class="image__container">
-                    <img src="assets/images/stage.png" alt="">
+                    <img src="assets/images/62cc9ab094122bc8.jpeg" alt="">
                   </figure>
 
                   <answer-input v-bind:correct="correctAnswer['stage2']['q2']" v-on:answer-input="answerInput($event, 'stage2', 2)"></answer-input>
@@ -159,7 +160,7 @@ Youtube貼り付けここまで -->
                 <div class="column">
 
                   <figure class="image__container">
-                    <img src="assets/images/stage.png" alt="">
+                    <img src="assets/images/62cc9ab094122bc8.jpeg" alt="">
                   </figure>
 
                   <answer-input v-bind:correct="correctAnswer['stage2']['q3']" v-on:answer-input="answerInput($event, 'stage2', 3)"></answer-input>
@@ -201,7 +202,7 @@ Youtube貼り付けここまで -->
               個人情報を守り、お母さんにもバレずに済んだ。<br>
               無事解決！</p>
             <figure class="image__container">
-              <img src="assets/images/stage.png" alt="">
+              <img src="assets/images/62cc9ab094122bc8.jpeg" alt="">
             </figure>
           </div>
         </section>
@@ -228,7 +229,7 @@ Youtube貼り付けここまで -->
           <div class="container">
 
             <figure class="image__container">
-              <img src="assets/images/stage.png" alt="">
+              <img src="assets/images/62cc9ab094122bc8.jpeg" alt="">
             </figure>
           </div>
         </section>
@@ -249,7 +250,7 @@ STAGE3-2追加ここまで -->
           <div class="container">
 
             <figure class="image__container">
-              <img src="assets/images/stage.png" alt="">
+              <img src="assets/images/62cc9ab094122bc8.jpeg" alt="">
             </figure>
           </div>
         </section>
