--- a/real-escape-game-v5/main.html
+++ b/real-escape-game-v5/main.html
@@ -36,7 +36,10 @@
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>さぁゲームを始めよう！</h2>
             <p class="text-center">パソコンにウイルスが侵入してしまった。このままだと個人情報を盗まれてしまう。<br>
               メールアドレスを取られてしまった。クイズを間違えると不正利用されてしまう。<br>
-              クイズを解いてメールアドレスを守ろう！<br>             <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
+              クイズを解いてメールアドレスを守ろう！<br>
+            時報　-  警察　＝7,天気 - 火事　＝?<br/>
+              ？には数字が入ります<br/>
+            <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
   
             <div class="container">
               <figure class="image__container">
@@ -111,6 +114,7 @@ Youtube貼り付けここまで -->
               <p class="text-center">住所は守れた。<br>
                 だが、クレジットカードのパスワードを盗まれてしまった。<br> 
                 このままだとクレジットカードを使って勝手に買い物をされてしまう。<br>
+                ヨ　ー　1 ＝　コ,タ　ー　1 ＝　ク,イ　ー　1 ＝　ノ,ウ　ー　１＝？<br/>
             　　　　　　クイズを解いてクレジットカードの情報を守ろう！</p>
           <div class="stage-column__container section bg-color--keycolor">
             <div class="container">
