3問目の謎を追加してます

--- a/real-escape-game-v5/main.html
+++ b/real-escape-game-v5/main.html
@@ -204,6 +204,9 @@ Youtube貼り付けここまで -->
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>家庭科室の課題とは</h2>
             <p class="text-center">ウイルスを除去することができた！<br>
               個人情報を守り、お母さんにもバレずに済んだ。<br>
+              命の終わり,世界の中心,来世の始まり<br>
+「答え方」　
+漢字一字で答える。<br/>
               無事解決！</p>
             <figure class="image__container">
               <img src="assets/images/62cc9ab094122bc8.jpeg" alt="">
