全角で入力して。と追記した
なぜか、半角では適用できない。なので、とりあえず、全角で入力しろとメッセージを書いた

--- a/real-escape-game-v5/main.html
+++ b/real-escape-game-v5/main.html
@@ -38,7 +38,7 @@
               メールアドレスを取られてしまった。クイズを間違えると不正利用されてしまう。<br>
               クイズを解いてメールアドレスを守ろう！<br>
             時報　-  警察　＝7,天気 - 火事　＝?<br/>
-              ？には数字が入ります<br/>
+              ？には全角の数字が入ります<br/>
             <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
   
             <div class="container">
