問題の改行を追加した

--- a/real-escape-game-v5/main.html
+++ b/real-escape-game-v5/main.html
@@ -37,7 +37,8 @@
             <p class="text-center">パソコンにウイルスが侵入してしまった。このままだと個人情報を盗まれてしまう。<br>
               メールアドレスを取られてしまった。クイズを間違えると不正利用されてしまう。<br>
               クイズを解いてメールアドレスを守ろう！<br>
-            時報　-  警察　＝7,天気 - 火事　＝?<br/>
+            時報　-  警察　＝7<br>
+              天気 - 火事　＝?<br/>
               ？には全角の数字が入ります<br/>
             <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
   
@@ -114,7 +115,10 @@ Youtube貼り付けここまで -->
               <p class="text-center">住所は守れた。<br>
                 だが、クレジットカードのパスワードを盗まれてしまった。<br> 
                 このままだとクレジットカードを使って勝手に買い物をされてしまう。<br>
-                ヨ　ー　1 ＝　コ,タ　ー　1 ＝　ク,イ　ー　1 ＝　ノ,ウ　ー　１＝？<br/>
+                ヨ　ー　1 ＝　コ<br>
+                タ　ー　1 ＝　ク<br>
+                イ　ー　1 ＝　ノ<br>
+                ウ　ー　１＝？<br/>
             　　　　　　クイズを解いてクレジットカードの情報を守ろう！</p>
           <div class="stage-column__container section bg-color--keycolor">
             <div class="container">
@@ -204,8 +208,10 @@ Youtube貼り付けここまで -->
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>家庭科室の課題とは</h2>
             <p class="text-center">ウイルスを除去することができた！<br>
               個人情報を守り、お母さんにもバレずに済んだ。<br>
-              問題:命の終わり,世界の中心,来世の始まり<br>
-「答え方」　
+              [問題]<br>
+              命の終わり<<br>
+              来世の始まり<br>
+「答え方」　<br>
 漢字一字で答える。<br/>
             <figure class="image__container">
               <img src="assets/images/62cc9ab094122bc8.jpeg" alt="">
