問題3に記述もれがあったため追加した

--- a/real-escape-game-v5/main.html
+++ b/real-escape-game-v5/main.html
@@ -210,6 +210,7 @@ Youtube貼り付けここまで -->
               個人情報を守り、お母さんにもバレずに済んだ。<br>
               [問題]<br>
               命の終わり<<br>
+              世界の中心<br>
               来世の始まり<br>
 「答え方」　<br>
 漢字一字で答える。<br/>
