問題三の誤字を訂正
命の終わり　の語尾に＜　がついていたため、削除

--- a/real-escape-game-v5/main.html
+++ b/real-escape-game-v5/main.html
@@ -209,7 +209,7 @@ Youtube貼り付けここまで -->
             <p class="text-center">ウイルスを除去することができた！<br>
               個人情報を守り、お母さんにもバレずに済んだ。<br>
               [問題]<br>
-              命の終わり<br>
+              命の終わりbr>
               世界の中心<br>
               来世の始まり<br>
 「答え方」　<br>
