問題1の全角の数字の全角を削除

--- a/real-escape-game-v5/main.html
+++ b/real-escape-game-v5/main.html
@@ -39,7 +39,7 @@
               クイズを解いてメールアドレスを守ろう！<br>
             時報　-  警察　＝7<br>
               天気 - 火事　＝?<br/>
-              ？には全角の数字が入ります<br/>
+              ？には数字が入ります<br/>
             <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
   
             <div class="container">
