STAGE: 〜　の後の文字を変えた

--- a/real-escape-game-v5/main.html
+++ b/real-escape-game-v5/main.html
@@ -64,7 +64,7 @@ Youtube貼り付けここまで -->
         <!-- STAGE1解答入力セクション　ここから -->
         <section class="section bg-color--keycolor">
           <div class="container">
-            <h2 class="section-title"><span class="section-title__stage">STAGE：1</span>キーワードを入力</h2>
+            <h2 class="section-title"><span class="section-title__stage">STAGE：1</span>数字を入力</h2>
             <!------------------------------------------------------------------------------------------------------------
               解答入力欄のコンポーネントです。入力欄・送信ボタン・エラーメッセージを表示します。
               v-bind:correct="correctAnswer['stage1']['q1']" は正解の解答を指します。
@@ -93,10 +93,7 @@ Youtube貼り付けここまで -->
               <div class="clear-message__content">次はIPアドレスを取得されてしまった。住所を特定されてしまう。<br>
                 家に変なものや着払いで宅配物が届けられるかも。<br>
                 クイズを解いて住所を守ろう！</div>
-              ヨ　ー　1 ＝　コ<br>
-                タ　ー　1 ＝　ク<br>
-                イ　ー　1 ＝　ノ<br>
-                ウ　ー　１＝？<br/>              <button v-on:click="nextStage('stage1')" onclick="location.href='#sectionStage2'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
+              <button v-on:click="nextStage('stage1')" onclick="location.href='#sectionStage2'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
         </section>
@@ -114,16 +111,15 @@ Youtube貼り付けここまで -->
         <section>
           <div class="section">
             <div class="container">
-              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>黒板に書かれている謎を解け！</h2>
+              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>2問目の謎を解け！</h2>
               <p class="text-center">住所は守れた。<br>
                 だが、クレジットカードのパスワードを盗まれてしまった。<br> 
                 このままだとクレジットカードを使って勝手に買い物をされてしまう。<br>
-                  [問題]<br>
-              命の終わり<br>
-              世界の中心<br>
-              来世の始まり<br>
-「答え方」　<br>
-漢字一字で答える。<br/>            　　　　　　クイズを解いてクレジットカードの情報を守ろう！</p>
+                ヨ　ー　1 ＝　コ<br>
+                タ　ー　1 ＝　ク<br>
+                イ　ー　1 ＝　ノ<br>
+                ウ　ー　１＝？<br/>
+            　　　　　　クイズを解いてクレジットカードの情報を守ろう！</p>
           <div class="stage-column__container section bg-color--keycolor">
             <div class="container">
               <h2 class="section-title"><span class="section-title__stage">STAGE：2</span>キーワードを入力</h2>
@@ -209,10 +205,15 @@ Youtube貼り付けここまで -->
         <!-- STAGE3-1問題セクション　ここから -->
         <section class="section">
           <div class="container">
-            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>家庭科室の課題とは</h2>
+            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>いよいよ最後の謎だ</h2>
             <p class="text-center">ウイルスを除去することができた！<br>
               個人情報を守り、お母さんにもバレずに済んだ。<br>
-              
+              [問題]<br>
+              命の終わり<br>
+              世界の中心<br>
+              来世の始まり<br>
+「答え方」　<br>
+漢字一字で答える。<br/>
             <figure class="image__container">
               <img src="assets/images/62cc9ab094122bc8.jpeg" alt="">
             </figure>
