--- a/real-escape-game-v5/main.html
+++ b/real-escape-game-v5/main.html
@@ -90,13 +90,7 @@ Youtube貼り付けここまで -->
           <div class="container">
             <div class="clear-message">
               <div class="clear-message__title">STAGE：１  クリア！</div>
-              <div class="clear-message__content">次はIPアドレスを取得されてしまった。住所を特定されてしまう。<br>
-                家に変なものや着払いで宅配物が届けられるかも。<br>
-                クイズを解いて住所を守ろう！</div>
-               ヨ　ー　1 ＝　コ<br>
-                タ　ー　1 ＝　ク<br>
-                イ　ー　1 ＝　ノ<br>
-                ウ　ー　１＝？<br/>              <button v-on:click="nextStage('stage1')" onclick="location.href='#sectionStage2'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
+              　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　メールアドレスは守れた！</div>              <div class="clear-message__content">            <button v-on:click="nextStage('stage1')" onclick="location.href='#sectionStage2'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
         </section>
@@ -115,15 +109,13 @@ Youtube貼り付けここまで -->
           <div class="section">
             <div class="container">
               <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>2問目の謎を解け！</h2>
-              <p class="text-center">住所は守れた。<br>
-                だが、クレジットカードのパスワードを盗まれてしまった。<br> 
-                このままだとクレジットカードを使って勝手に買い物をされてしまう。<br>
-                [問題]<br>
-              命の終わり<br>
-              世界の中心<br>
-              来世の始まり<br>
-「答え方」　<br>
-漢字一字で答える。<br/>            　　　　　　クイズを解いてクレジットカードの情報を守ろう！</p>
+              <p class="text-center">次はIPアドレスを取得されてしまった。住所を特定されてしまう。<br>
+                家に変なものや着払いで宅配物が届けられるかも。<br>
+                クイズを解いて住所を守ろう！</div>
+               ヨ　ー　1 ＝　コ<br>
+                タ　ー　1 ＝　ク<br>
+                イ　ー　1 ＝　ノ<br>
+                ウ　ー　１＝？<br/>                
                                   <img src="assets/images/62cc9ab094122bc8.jpeg" alt="">
 
           <div class="stage-column__container section bg-color--keycolor">
@@ -194,9 +186,7 @@ Youtube貼り付けここまで -->
           <div class="container">
             <div class="clear-message">
               <div class="clear-message__title">STAGE：2　クリア！</div>
-              <div class="clear-message__content">ウイルスを除去できる情報を入手できた！<br>
-                ウイルスを完全に除去しよう！</div>
-                <button v-on:click="nextStage('stage2')" onclick="location.href='#sectionStage3'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
+              <div class="clear-message__content"> 住所は守れた。<br>                <button v-on:click="nextStage('stage2')" onclick="location.href='#sectionStage3'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
         </section>
@@ -211,8 +201,15 @@ Youtube貼り付けここまで -->
         <section class="section">
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>いよいよ最後の謎だ</h2>
-            <p class="text-center">ウイルスを除去することができた！<br>
-              個人情報を守り、お母さんにもバレずに済んだ。<br>
+            <p class="text-center">  住所は守れた。<br>
+                だが、クレジットカードのパスワードを盗まれてしまった。<br> 
+                このままだとクレジットカードを使って勝手に買い物をされてしまう。<br>
+              クイズを解いてクレジットカードの情報を守ろう！</p>                 [問題]<br>
+              命の終わり<br>
+              世界の中心<br>
+              来世の始まり<br>
+「答え方」　<br>
+漢字一字で答える。<br/>            　　　　　
               
             <figure class="image__container">
               <img src="assets/images/62cc9ab094122bc8.jpeg" alt="">
