--- a/real-escape-game-v5/main.html
+++ b/real-escape-game-v5/main.html
@@ -221,7 +221,7 @@
           <div class="container">
             <h2 class="section-title"><span class="section-title__stage">STAGE：3</span>キーワードを入力</h2>
             <!-----------------------------------------------------------------------------------------------------------------
-              解答入力欄のコンポーネントです。
+              解答入力欄のコンポーネントです！
               v-on:answer-input="answerInput($event, 'stage3', 1, 'final')" は送信ボタンをクリックした時の動作を決める関数です。
               4番目の引数 'final' は最終ステージを表します。
             ------------------------------------------------------------------------------------------------------------------>
